--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <img src="cover.png">
     <h1>The Walsh Hadamard Transform Basics and Applications</h1>
-    <h2>Buy It Now (40+pages PDF file)</h2>
+    <h2>Buy It Now (PDF file 40+ pages)</h2>
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div id="paypal-button-container"></div>
