--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <img src="cover.png">
     <h1>The Walsh Hadamard Transform Basics and Applications</h1>
     <h2>Buy It Now (PDF file 40+ pages)</h2>
+    <a href="https://archive.org/details/whtbooklet-sample">WHT Booklet Sample</a> 
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div id="paypal-button-container"></div>
