--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   </head>
   <body>
     <img src="cover.png">
-    <h1>The Walsh Hadamard Transform Basics and Applications</h1>
-    <a href="https://archive.org/details/whtbooklet-sample">WHT Booklet Sample</a>   
-    <h2>Buy It Now ($9.95 PDF file 40+ pages)</h2>
+    <h1>The Walsh Hadamard Transform Basics and Applications</h1> 
+    <h2>Buy It Now ($9.95 US, PDF file:40+ pages)</h2>
     <div id="smart-button-container">
       <div style="text-align: center;">
         <div id="paypal-button-container"></div>
